[gd_scene load_steps=4 format=3 uid="uid://b7ty05m56ksow"]

[ext_resource type="Script" path="res://snake_engine/main.gd" id="1_20cme"]
[ext_resource type="Script" path="res://snake_engine/move_timer/move_timer.gd" id="2_734pb"]
[ext_resource type="PackedScene" uid="uid://bk3fu16h5e36m" path="res://audio/audio_library.tscn" id="3_06phk"]

[node name="Main" type="Node"]
script = ExtResource("1_20cme")

[node name="MoveTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
script = ExtResource("2_734pb")

[node name="Powerup1Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
autostart = true

[node name="AudioLibrary" parent="." instance=ExtResource("3_06phk")]
unique_name_in_owner = true

[connection signal="timeout" from="MoveTimer" to="MoveTimer" method="_on_timeout"]
